# WizWiki

./: .flake8  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: publish.yml  test.yml
src/wizwiki/: __init__.py  client.py
src/wizwiki/models/: base.py  creature.py  house.py  item.py  jewel.py  location.py  npc.py  quest.py  reagent.py  recipe.py  spell.py
tests/: test_client.py  test_creature.py  test_interface.py  test_item.py  test_location.py  test_recipe.py  test_resources.py  test_spell.py
