[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wizwiki"
version = "0.1.2"
description = "A modern asynchronous client for the Wizard101 Wiki."
readme = "README.md"
authors = [
    {name = "Angle-Brackets"}
]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "cloudscraper>=1.2.71",
    "beautifulsoup4>=4.12.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "flake8>=6.0.0",
    "tox>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/Angle-Brackets/WizWiki"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
